<resources>

    <string name="app_name">SuperMunchkin</string>
    <string name="averageGearAbbr">AVG GEAR</string>
    <string name="averageLevelAbbr">AVG LEVEL</string>
    <string name="cancel">Cancel</string>
    <string name="choose_next">Choose Next</string>
    <string name="declare_victor">is the winner!</string>
    <string name="done">Done</string>
    <string name="false_abbr">F</string>
    <string name="finish">Finish</string>
    <string name="firstName">First Name</string>
    <string name="first_player_prompt">Who Plays First?</string>
    <string name="gamesPlayedAbbr">GAMES PLAYED</string>
    <string name="gamesWonAbbr">GAMES WON</string>
    <string name="gear">Gear</string>
    <string name="gearAbbr">GEAR</string>
    <string name="lastName">Last Name</string>
    <string name="level">Level</string>
    <string name="levelAbbr">LEVEL</string>
    <string name="menu_settings">Settings</string>
    <string name="nextPlayer">Next Player</string>
    <string name="next_player_prompt">Who Plays Next?</string>
    <string name="one">1</string>
    <string name="new_game">New Game</string>
    <string name="player">PLAYER</string>
    <string name="playerName">Player Name</string>
    <string name="plus_sign">+</string>
    <string name="previousPlayer">Previous Player</string>
    <string name="reorder">Reorder</string>
    <string name="removePlayers">Remove Players</string>
    <string name="remove">Remove</string>
    <string name="restorePlayers">Restore Players</string>
    <string name="restore">Restore</string>
    <string name="resume_game">Resume Game</string>
    <string name="unfinished_game">Unfinished Game</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="statistics">Statistics</string>
    <string name="totalGearAbbr">TOTAL GEAR</string>
    <string name="totalLevelAbbr">TOTAL LEVEL</string>
    <string name="true_abbr">T</string>
    <string name="warrior">Warrior</string>
    <string name="warriorAbbr">WARR</string>
    <string name="warriorFull">WARRIOR</string>
    <string name="winPercentageAbbr">WIN%</string>
    <string name="zero">0</string>
    <string name="zeroPercent">0.0%</string>

</resources>