
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white" >

        <EditText
            android:id="@+id/addPlayerFirstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/firstName" />

        <EditText
            android:id="@+id/addPlayerLastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lastName" />
        
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:background="@android:color/white" >

	        <Button
	            android:id="@+id/addPlayerCancelButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	        	style="?android:attr/borderlessButtonStyle"
	            android:text="@string/cancel" />
	
	        <Button
	            android:id="@+id/addPlayerSaveButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	        	style="?android:attr/borderlessButtonStyle"
	            android:text="@string/save" />
        
        </LinearLayout>

    </LinearLayout>
